--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "dependencies": {
     "axios": "^0.19.0",
     "next": "^9.1.5",
+    "next-routes": "^1.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-ga": "^2.7.0"
+    "react-ga": "^2.7.0",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
-    "dev": "next",
-    "start": "next start",
+    "dev": "node server.js",
+    "start": "NODE_ENV=production node server.js",
     "build": "next build"
+  },
+  "devDependencies": {
+    "babel-plugin-root-import": "^6.4.1",
+    "babel-plugin-styled-components": "^1.10.6"
   }
 }
